myK8S/ytdl/ytdl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ytdl-svc
  namespace: personal
spec:
  selector:
    app: ytdl
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
